--- a/arm32-linux4.9-compile/Dockerfile
+++ b/arm32-linux4.9-compile/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /root/
 RUN apt-get update && apt-get install bc xz-utils bzip2 wget make gcc gcc-5-arm-linux-gnueabi vim openssh-server openssh-client -y 
 ADD busybox-1.20.2.tar.bz2 ./ 
 ADD linux-4.9.tar.xz ./ 
-COPY compile.sh mkvm.sh sshd_config start.sh ./
+COPY compile.sh mkvm.sh make_all.sh sshd_config start.sh ./
 
 EXPOSE 22
 ENTRYPOINT /root/start.sh && tail -f /dev/null
